<resources>
    <string name="app_name">Hotels</string>
    <string name="grade">5 Превосходно</string>
    <string name="title">Отель</string>
    <string name="hotelName">Steigenberger Makadi</string>
    <string name="location">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="price">от 134 673 ₽</string>
    <string name="info">за тур с перелётом</string>
    <string name="toSelect">К выбору номера</string>
    <string name="about_line">3-я линия</string>
    <string name="about_wifi">Платный Wi-Fi в фойе</string>
    <string name="about_airport">30 км до аэропорта</string>
    <string name="about_beach">1 км до пляжа</string>
    <string name="essentials">Самое необходимое</string>
    <string name="what_included">Что включено</string>
    <string name="facilities">Удобства</string>
    <string name="not_included">Что не включено</string>
    <string name="about_hotel">Об отеле</string>
    <string name="full_info">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="number_title">Стандартный с видом на бассейн\nили сад</string>
    <string name="all_inclusive">Все включено</string>
    <string name="conditioner">Кондиционер</string>
    <string name="moreInfo">Подробнее о номере</string>
    <string name="number_price">186 600 ₽</string>
    <string name="for_7_days">за 7 ночей с перелётом</string>
    <string name="select_number">Выбрать номер</string>
    <string name="reservation">Бронирование</string>
    <string name="paid">Заказ оплачен</string>
    <string name="departure">Вылет из</string>
    <string name="sp">Санкт-Петербург</string>
    <string name="country_city">Страна, город</string>
    <string name="data">Даты</string>
    <string name="count_nights">Кол-во ночей</string>
    <string name="hotel">Отель</string>
    <string name="number">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="egypt_hurghada">Египет, Хургада</string>
    <string name="number_data">19.09.2023 – 27.09.2023</string>
    <string name="seven_nights">7 ночей</string>
    <string name="about_number">Стандартный с видом на\nбассейн или сад</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="email_example">examplemail.000@mail.ru</string>
    <string name="phone_number_example">+7 (951) 555–99–00</string>
    <string name="about_customer">Информация о покупателе</string>
    <string name="disclaimer">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="numberOfTourist">Первый турист</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="validity_period">Срок действия загранпаспорта</string>
    <string name="born_data">Дата рождения</string>
    <string name="ivanov">Иванов</string>
    <string name="surname">Фамилия</string>
    <string name="ivan">Иван</string>
    <string name="name">Имя</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="service_fee">Сервисный сбор</string>
    <string name="to_paid">К оплате</string>
    <string name="fuel_levy">Топливный сбор</string>
    <string name="tour">Тур</string>
    <string name="order_paid">Заказ оплачен</string>
    <string name="in_process">Ваш заказ принят в работу</string>
    <string name="paid_info">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>

    <string name="MAX_TOURIST_COUNT">Добавлено максимальное количество туристов</string>
</resources>