<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="66dp">

    <TextView
        android:id="@+id/line"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        style="@style/about_style"
        android:text="@string/about_line"/>

    <TextView
        android:id="@+id/wifi"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:text="@string/about_wifi"
        style="@style/about_style"
        android:layout_toEndOf="@+id/line"/>

    <TextView
        android:id="@+id/airport"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:text="@string/about_airport"
        style="@style/about_style"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/beach"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:text="@string/about_beach"
        style="@style/about_style"
        android:layout_toEndOf="@id/airport"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>